<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="2"
            android:inputType="textPersonName"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/cancel"
            android:onClick="GotoFirstScreen"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:text="@string/newcontact"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="2"
            android:inputType="textPersonName"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:text="@string/save"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:text="@string/storagepath"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="283dp"
        android:layout_height="123dp"
        android:layout_gravity="center"
        android:src="@drawable/profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/givenname"
        android:textSize="20dp"
        android:clickable="true"
        android:textStyle="bold"
        android:layout_weight="2"/>

    <EditText
        android:id="@+id/givenName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:clickable="true"
        android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/familyname"
            android:textSize="20dp"
            android:clickable="true"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/familyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:clickable="true"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/mobile"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:clickable="true"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:clickable="true"
            android:layout_weight="1"/>
    </LinearLayout>




</LinearLayout>